[EWL-5310] Fix padding/spacing on the first part of the page on all breakpoints.

--- a/styleguide/source/assets/scss/05-pages/_category.scss
+++ b/styleguide/source/assets/scss/05-pages/_category.scss
@@ -1,9 +1,12 @@
 .ama__category {
-  .ama__masthead {
+  &__row--no-mobile-padding {
     @include breakpoint($bp-small max-width) {
-      margin-bottom: $gutter / 4;
+      padding: 0;
     }
+  }
 
+  .ama__masthead {
+    margin-bottom: $gutter / 4;
     padding: 0;
   }
 
@@ -13,5 +16,9 @@
 
   .ama__tools {
     padding: 0;
+  }
+
+  .ama__membership {
+    margin: $gutter 0;
   }
 }
